--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-/.gradle
-/bin
-/build
+.gradle
+.idea
+.settings
+bin
+build
+private
+out
+.classpath
+.project
+gradle.xml
+misc.xml
+om2.iml
+vcs.xml
+/.nb-gradle/
